# tyr-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci_pytest.yml  ci_release.yml  release.yml
docs/: api.md  context.md  dumping.md  index.md  tyr.planning.describe_generator.md  tyr.planning.find_satisficing_plan.md  tyr.planning.prove_solvability.md  tyr.planning.sample_generator.md
docs/conventions/: CODING.md
src/pytyr_mcp/: __init__.py  artifacts.py  callsite.py  config.py  context.py  defaults.py  dumping.py  enums.py  invoke.py  json_types.py  keys.py  paths.py  roles.py  server.py
src/pytyr_mcp/planning/: __init__.py  search.py
src/pytyr_mcp/planning/sample_generator/: results.py  service.py  tools.py
src/pytyr_mcp/planning/solvability/: __init__.py  schemas.py  service.py  tools.py
tests/: __init__.py  test_packaging.py  test_roles.py  test_server_output_paths.py
tests/planning/: test_python_api.py  test_sample_generator_output.py
tests/planning/solvability/: __init__.py  test_prove_solvability_output.py
