[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pytyr-mcp"
version = "0.0.1"
description = "MCP server exposing pytyr planning tools for planning-and-learning agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dominik Drexler"},
]
dependencies = [
    "fastmcp>=2",
    "pytyr>=0.0.24,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
pytyr-mcp-invoke = "pytyr_mcp.invoke:main"
pytyr-mcp = "pytyr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pytyr_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
