[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pytyr-mcp"
version = "0.0.6"
description = "Typed pytyr planning API for planning-and-learning agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Dominik Drexler"},
]
dependencies = [
    "pytyr>=0.0.26,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]


[tool.hatch.build.targets.wheel]
packages = ["src/pytyr_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
